fixing width  on mobile for ssn and dob fields

--- a/public/stylesheets/media_queries.css
+++ b/public/stylesheets/media_queries.css
@@ -397,6 +397,18 @@
           height: 10px !important;
         }
 
+        .ssn {
+          display: block;
+        }
+        .ssn-title {
+          display: block;
+          width: 100%;
+        }
+        .ssn .form-control {
+          width: 25%;
+          display: inline-block;
+        }
+
 
     }
 
